[package]
name = "ym2149-core"
version = "0.1.0"
edition = "2024"
authors = ["vw.dvw <jaba7012@proton.me>"]
license = "MIT OR Apache-2.0"
readme-file = "README.md"

description = "Generic driver for YM2149 sound chips"
repository = "https://github.com/OrdinarySoftwareDev/ym2149-core-rs"
keywords = ["ym2149", "audio", "chiptune", "psg", "hal"]
categories = ["embedded", "hardware-support", "multimedia::audio", "no-std::no-alloc"]

[features]
notes = []
read = []

[dependencies]
libm = "0.2.16"
