[package]
name = "ay-psg"
version = "0.2.0"
edition = "2024"
authors = ["doublezerowld <jaba7012@proton.me>"]
license = "MIT OR Apache-2.0"
readme-file = "README.md"

description = "A platform-agnostic, no_std generic driver for the AY-3-8910 family of 3‑voice PSG sound chips."
repository = "https://github.com/doublezerowld/ay-psg"
keywords = ["ay-3-8910", "ym2149", "chiptune", "psg", "hal"]
categories = ["embedded", "hardware-support", "no-std::no-alloc"]

[features]
notes = []
read = []
default = ["read"]

[dependencies]
libm = "0.2.16"
